[project]
name = "openenv-email-triage"
version = "0.1.0"
description = "OpenEnv Email Triage Agent"
requires-python = ">=3.8"

dependencies = [
    "httpx",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main" ✅

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
